[package]
name = "s3-md5-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.1"
md-5 = "0.10.5"
hex = "0.4.3"
bytes = "1.4.0"
